Fix issue with overlapping videos on student section

--- a/assets/css/graduation.css
+++ b/assets/css/graduation.css
@@ -467,7 +467,7 @@ ul.majors li:hover {
     margin: 1rem 0 !important;
 }
 
-.student-message.section-container {
+.student-message.section-container .inner-container {
     height: auto;
 }
 
